Fixed body overflow in offline page
Minor fixes.

--- a/css/offline.css
+++ b/css/offline.css
@@ -1,7 +1,12 @@
-.porter{
+body {
+    overflow: hidden;
+}
 
+.porter{
     animation: rotation 5s infinite linear;
 }
+
+
 @keyframes rotation {
     from {
         transform: rotate(0deg);
